--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "private": true,
   "homepage": "https://ellat99/SLIMMOM/",
   "dependencies": {
+    "@fontsource/ubuntu": "^5.0.13",
+    "@mui/material": "^5.15.21",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.1.0",
+    "react-datepicker": "^7.2.0",
     "react-dom": "^18.1.0",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.3"
   },
