--- a/package.json
+++ b/package.json
@@ -4,17 +4,30 @@
   "private": true,
   "homepage": "https://ellat99/SLIMMOM/",
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@fontsource/ubuntu": "^5.0.13",
+    "@mui/icons-material": "^5.15.21",
     "@mui/material": "^5.15.21",
+    "@reduxjs/toolkit": "^2.2.6",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.2",
+    "moment": "^2.30.1",
+    "notiflix": "^3.2.7",
     "react": "^18.1.0",
     "react-datepicker": "^7.2.0",
     "react-dom": "^18.1.0",
+    "react-helmet": "^6.1.0",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.2.1",
+    "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.1.2",
+    "react-responsive": "^10.0.0",
     "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
+    "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
